logics + routing + header + home + destination

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,88 @@
-@import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+:root {
+ 
+--font-sec: "Barlow Condensed", sans-serif;
+--color-first: #ffffff;
+--color-hover: #D0D6F9;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
   font-weight: normal;
 }
 
+li {
+  list-style-type: none;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+h1, 
+h2, 
+h3,
+h4,
+h5,
+p,
+a  {
+  color: var(--color-first);
+}
+h1, 
+h2, 
+h3,
+h4
+  {
+  font-family: "Bellefair", sans-serif;;
+}
+
+h5,
 a,
-.green {
+p,
+button {
+  font-family: "Barlow Condensed", sans-serif;
+}
+.bellefair-regular {
+  font-family: "Bellefair";
+  font-weight: 400;
+  font-style: normal;
+}
+
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+  list-style: none;
+  
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 0
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+main {
+  z-index: 1 !important;
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
