--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,10 +12,10 @@ html {
 }
 
 body, html {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
 *,
 *::before,
@@ -68,7 +68,7 @@ a {
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
