--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,21 +1,19 @@
-
 :root {
- 
---font-sec: "Barlow Condensed", sans-serif;
---color-first: #ffffff;
---color-hover: #D0D6F9;
+  --font-sec: "Barlow Condensed", sans-serif;
+  --color-first: #ffffff;
+  --color-sec: #D0D6F9;
+  --color-bar-hover: #8a8b90;
+  --color-dot-hover: #85868b;
 }
-
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
 }
-
 body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 *,
 *::before,
@@ -24,11 +22,10 @@ body, html {
   margin: 0;
   font-weight: normal;
 }
-
 li {
   list-style-type: none;
+  text-decoration: none;
 }
-
 h1 {
   font-size: 2.5rem;
 }
@@ -44,11 +41,9 @@ a  {
 h1, 
 h2, 
 h3,
-h4
-  {
+h4 {
   font-family: "Bellefair", sans-serif;;
 }
-
 h5,
 a,
 p,
@@ -60,13 +55,10 @@ button {
   font-weight: 400;
   font-style: normal;
 }
-
 a {
   text-decoration: none;
   list-style: none;
-  
 }
-
 .background {
   position: fixed;
   top: 0;
@@ -77,7 +69,6 @@ a {
   background-repeat: no-repeat;
   z-index: 0
 }
-
 main {
   z-index: 1 !important;
   position: absolute !important;
@@ -85,4 +76,31 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
+}
+.hover-border {
+  position: relative;
+  font-size: 24px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+}
+.hover-border::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 49%;
+  width: 0;
+  height: 3px;
+  background-color: var(--color-bar-hover);
+  transition: width .8s ease, left .8s ease;
+}
+.hover-border:hover::before,
+.router-link-exact-active::before,
+.hover-border.active::before  {
+  width: 110%;
+  left: -5%;
+}
+.router-link-exact-active::before,
+.active::before {
+  background-color: var(--color-first);
 }
