--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -41,7 +41,9 @@ a  {
 h1, 
 h2, 
 h3,
-h4 {
+h4,
+.distance-value,
+.travel-value {
   font-family: "Bellefair", sans-serif;;
 }
 h5,
@@ -74,8 +76,8 @@ main {
   position: absolute !important;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 .hover-border {
   position: relative;
