modif main.css -> .scss; fix screen touch issue

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -78,6 +78,9 @@ main {
   left: 0;
   width: 100vw;
   height: 100vh;
+  @media (min-width: 1150px) {
+    overflow: hidden !important;
+}
 }
 .hover-border {
   position: relative;
