--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -43,13 +43,13 @@ h2,
 h3,
 h4,
 .distance-value,
-.travel-value {
+.travel-value,
+.destinations-btns  {
   font-family: "Bellefair", sans-serif;;
 }
 h5,
 a,
-p,
-button {
+p {
   font-family: "Barlow Condensed", sans-serif;
 }
 .bellefair-regular {
