--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -88,6 +88,8 @@ main {
   cursor: pointer;
   display: inline-flex;
   align-items: center;
+  transition: color 1s ease;
+
 }
 .hover-border::before {
   content: "";
@@ -97,7 +99,7 @@ main {
   width: 0;
   height: 3px;
   background-color: var(--color-bar-hover);
-  transition: width .8s ease, left .8s ease;
+  transition: width 1s ease, left 1s ease, background-color 1s ease;
 }
 .hover-border:hover::before,
 .router-link-exact-active::before,
